2020.09.26 Kentaro Fukuchi <kentaro@fukuchi.org>
	[develop]
	* tests/test_qrencode.c:
	  - Minor memory leak bug in a test case has been fixed.

2020.09.22 Kentaro Fukuchi <kentaro@fukuchi.org>
	[develop]
	* mask.c, qrencode.h:
	  - Typos and grammer errors have been fixed.
	* Merge branch 'optimization'.

2020.09.21 Kentaro Fukuchi <kentaro@fukuchi.org>
	[optimization]
	* tests/prof_qrencode.c:
	  - Test numbers are extended.
	* mask.c:
	  - Minor optimizations.

2020.08.30 Kentaro Fukuchi <kentaro@fukuchi.org>
	[develop]
	* .github/workflows/configure.yml:
	  - Added macOS CI script.
	* qrencode.1.in, qrenc.c:
	  - Detailed description of text output types has been added.
	    (closes #142)
	* qrenc.c:
	  - Invalid XPM output has been fixed. (Thanks to @dlitz and @cbrt64)
	    (closes #136)
	[optimization]
	* qrencode.c:
	  - A tail recursion in FrameFiller_next() has been eliminated.

2020.08.29 Kentaro Fukuchi <kentaro@fukuchi.org>
	[release-4.1.0]
	* .github/workflows/{cmake,configure,cmake-windows}.yml:
	  - Github actions CI scripts have been added.
	* tests/test_bitstream.c:
	  - Fixed memory leak.
	* configure.ac, tests/{prof,pthread}_qrencode.c:
	  - Make configure to define HAVE_SYS_TIME_H in config.h.
	* CMakeLists.txt:
	  - 'wingetopt' has been replaced to 'getopt'.
	* qrencode.c, tests/test_qrencode.c:
	  - ECLEVEL check has been improved.
	* .gitignore:
	  - Added 'use/test-driver'.
	[master]
	* merged release-4.1.0.
	* version 4.1.0 has been released.

2020.08.28 Kentaro Fukuchi <kentaro@fukuchi.org>
	[develop]
	* Made a develoment branch.
	* test_qrspec.c:
	  - Typo fixes.
	* qrinput.[ch], tests/{test_qrencode.c, test_qrinput.c}:
	  - A precise boundary check has been introduced to
	    QRinput_estimateVersion(). (closes #160)
	* qrinput.c, qrencode.c, tests/test_qrencode.c, qrenc.c, qrencode.1.in:
	  - QRinput_encodeMode*() now throws ERANGE when encoding Micro QR Code
	    and an appropriate version number was not specified.