@@ -128,7 +128,7 @@ application.
 
 LICENSING INFORMATION
 =====================
-Copyright (C) 2006-2018 Kentaro Fukuchi
+Copyright (C) 2006-2018, 2020 Kentaro Fukuchi
 
 This library is free software; you can redistribute it and/or modify it under
 the terms of the GNU Lesser General Public License as published by the Free
