@@ -138,4 +138,4 @@ Main Web Site: https://fukuchi.org/works/qrencode/
 Source code repository: https://github.com/fukuchi/libqrencode/
 
 .SH COPYRIGHT
-Copyright (C) 2006-2018 Kentaro Fukuchi.
+Copyright (C) 2006-2018, 2020 Kentaro Fukuchi.
